--- a/readme
+++ b/readme
@@ -1,6 +1,43 @@
+# Profile - PYTHON FLASK
+The program can be run in the Python environment, and it will guide the user through each step of the contact tracing information collection process.
+
+# ❓ How this program run: 
 1. install python if you haven't install yet
 1.1 go to your working dir 
 2. install flask
     pip install flask
 3. execute the command 
     python app.py    
+
+_Note: the provided program contains exception handling to handle invalid inputs and ensures that the user provides valid responses. If the user enters invalid input, the program will display an error message and prompt the user to try again._
+
+# :heart: Contributor
+![image](https://user-images.githubusercontent.com/129654335/234447504-b897eec1-0a8b-4350-a11f-6efdf0357b81.png)
+
+Computer Engineering Student that creates various exercises to enhance skills in programming.
+
+_You can visit her at this social media link:_
+https://www.facebook.com/ryzamae.ronio.9
+
+# ⭐ You can also check other repositories ⭐
+_Decrypt User Input:_ https://github.com/RMAELILLA/Decrypt-User-Input
+
+_Cypher Text:_ https://github.com/RMAELILLA/Cipher-Text
+
+_Students Name and GWA:_ https://github.com/RMAELILLA/Students-Name-and-GWA
+
+_Number's Even or Odd:_ https://github.com/RMAELILLA/Numbers-Even-or-Odd
+
+_Write Multiple Lines:_ https://github.com/RMAELILLA/Write-Multiple-Lines
+
+_Math Operations:_ https://github.com/RMAELILLA/Math-Operations
+
+_TV TestTV:_ https://github.com/RMAELILLA/TV-TestTV
+
+_Calculator2:_ https://github.com/RMAELILLA/Calculator2
+
+_Inheritance Calculator:_ https://github.com/RMAELILLA/Inheritance-Calculator
+
+_FCP-Class:_ https://github.com/RMAELILLA/FCP-Class
+
+_Contact-Tracing:_ https://github.com/RMAELILLA/Contact-Tracing
